--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: rust
-
 rust:
   - stable
   - nightly
-  
 matrix:
   allow_failures:
     - rust: nightly
+
+addons:
+  apt:
+    packages:
+      - libx11-dev
